--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.6",
+    "hamburger-react": "^2.5.0",
     "i": "^0.3.7",
     "npm": "^10.4.0",
     "react": "^18.2.0",
