--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@vercel/analytics": "^1.0.2",
     "and": "^0.0.3",
-    "axios": "^1.6.2",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "daisyui": "^4.7.3",
     "framer-motion": "^11.0.6",
     "hamburger-react": "^2.5.0",
     "i": "^0.3.7",
     "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
